[gd_scene load_steps=15 format=3 uid="uid://bb3ty1kswqumk"]

[ext_resource type="Script" path="res://components/possessable_body.gd" id="1_i6q6v"]
[ext_resource type="PackedScene" uid="uid://bfm48yun2gt84" path="res://components/hitbox.tscn" id="2_trean"]
[ext_resource type="Script" path="res://components/health_component.gd" id="3_fdlml"]
[ext_resource type="PackedScene" uid="uid://s4xxvp4y718y" path="res://components/player_head.tscn" id="4_5j8mo"]
[ext_resource type="Script" path="res://components/states/state_machine.gd" id="5_rv6ym"]
[ext_resource type="Script" path="res://components/states/ground_move.gd" id="6_hq8e1"]
[ext_resource type="Script" path="res://components/states/fall.gd" id="7_8j2pb"]
[ext_resource type="PackedScene" uid="uid://cq5g02v88a56k" path="res://components/UI/health_bar.tscn" id="8_b0uty"]
[ext_resource type="PackedScene" uid="uid://dvlfw4kqxil1t" path="res://components/UI/player_ui.tscn" id="8_sm05t"]
[ext_resource type="Script" path="res://components/states/Label.gd" id="10_0b1sr"]
[ext_resource type="PackedScene" uid="uid://clsubmog0dnfk" path="res://components/UI/body_information.tscn" id="10_pacg2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vsk44"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gptev"]
radius = 0.581739
height = 2.22502

[sub_resource type="CapsuleMesh" id="CapsuleMesh_oresp"]

[node name="PossessableBody" type="CharacterBody3D" node_paths=PackedStringArray("health", "head", "state_machine")]
collision_layer = 4
collision_mask = 5
script = ExtResource("1_i6q6v")
health = NodePath("HealthComponent")
head = NodePath("head")
state_machine = NodePath("StateMachine")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_vsk44")

[node name="Hitbox" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("2_trean")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
shape = SubResource("CapsuleShape3D_gptev")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_oresp")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_fdlml")

[node name="head" parent="." instance=ExtResource("4_5j8mo")]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_rv6ym")
initial_state = NodePath("move")

[node name="move" type="Node" parent="StateMachine" node_paths=PackedStringArray("fall_state")]
script = ExtResource("6_hq8e1")
fall_state = NodePath("../fall")

[node name="fall" type="Node" parent="StateMachine" node_paths=PackedStringArray("move_state")]
script = ExtResource("7_8j2pb")
move_state = NodePath("../move")
gravity = -18.0
acceleration = 10.0
friction = 3.0

[node name="PlayerUI" parent="." node_paths=PackedStringArray("body_info", "parent_shell") instance=ExtResource("8_sm05t")]
body_info = NodePath("BodyInformation")
parent_shell = NodePath("..")

[node name="HealthBar" parent="PlayerUI" node_paths=PackedStringArray("health") instance=ExtResource("8_b0uty")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -27.0
offset_right = 395.0
offset_bottom = 0.0
grow_vertical = 0
health = NodePath("../../HealthComponent")

[node name="Label" type="Label" parent="PlayerUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("10_0b1sr")

[node name="BodyInformation" parent="PlayerUI" instance=ExtResource("10_pacg2")]
layout_mode = 1
shell_name = "Husk"
shell_description = "A weak shell that isn't good at much, other than being a temporary host until you find a better vessel."

[connection signal="switched_state" from="StateMachine" to="PlayerUI/Label" method="_on_state_machine_switched_state"]
